Fixed previous buggy behaviour. Can still break if many consecutive random jumps.

--- a/week2/day9/kitty-carousel/style.css
+++ b/week2/day9/kitty-carousel/style.css
@@ -37,6 +37,10 @@ body {
     transition-duration: 1s;
 }
 
+#kittyDiv img.instantLeft {
+    transform: translateX(-100%);
+}
+
 #kittyDiv img.onRight {
     transform: translateX(100%);
     transition-property: transform;
